==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.

Breaking Changes
================

Changes
=======

Fixes
=====

- Fixed an issue that caused an ``UnsupportedFeatureException`` to be thrown
  when deleting or updating by query on an empty partitioned table, instead of
  just returning 0 rows deleted/updated.

- Fixed an issue which could result in lost entries at the ``sys.jobs_log`` and
  ``sys.operations_log`` tables when the related settings are changed while
  entries are written.