@@ -35,7 +35,6 @@ import com.carrotsearch.hppc.cursors.IntObjectCursor;
 import com.carrotsearch.hppc.procedures.ObjectProcedure;
 import com.google.common.base.MoreObjects;
 import io.crate.Streamer;
-import io.crate.expression.eval.EvaluatingNormalizer;
 import io.crate.breaker.CrateCircuitBreakerService;
 import io.crate.breaker.RamAccountingContext;
 import io.crate.breaker.RowAccounting;
@@ -43,17 +42,15 @@ import io.crate.data.Bucket;
 import io.crate.data.Row;
 import io.crate.data.RowConsumer;
 import io.crate.execution.TransportActionProvider;
-import io.crate.execution.engine.distribution.SingleBucketBuilder;
-import io.crate.metadata.Functions;
-import io.crate.metadata.Routing;
-import io.crate.expression.InputFactory;
+import io.crate.execution.dsl.phases.CollectPhase;
+import io.crate.execution.dsl.phases.CountPhase;
+import io.crate.execution.dsl.phases.ExecutionPhase;
+import io.crate.execution.dsl.phases.ExecutionPhaseVisitor;
+import io.crate.execution.dsl.phases.ExecutionPhases;
+import io.crate.execution.dsl.phases.FetchPhase;
+import io.crate.execution.dsl.phases.MergePhase;
+import io.crate.execution.dsl.phases.NestedLoopPhase;
 import io.crate.execution.dsl.phases.NodeOperation;
-import io.crate.execution.engine.collect.PKLookupOperation;
-import io.crate.execution.support.Paging;
-import io.crate.expression.RowFilter;
-import io.crate.execution.dsl.phases.PKLookupPhase;
-import io.crate.execution.dsl.phases.RoutedCollectPhase;
-import io.crate.execution.dsl.phases.UpstreamPhase;
 import io.crate.execution.dsl.phases.PKLookupPhase;
 import io.crate.execution.dsl.phases.RoutedCollectPhase;
 import io.crate.execution.dsl.phases.UpstreamPhase;
@@ -62,31 +59,24 @@ import io.crate.execution.engine.collect.JobCollectContext;
 import io.crate.execution.engine.collect.MapSideDataCollectOperation;
 import io.crate.execution.engine.collect.PKLookupOperation;
 import io.crate.execution.engine.collect.count.CountOperation;
-import io.crate.execution.engine.collect.PKLookupOperation;
-import io.crate.execution.engine.collect.count.CountOperation;
 import io.crate.execution.engine.collect.sources.ShardCollectSource;
 import io.crate.execution.engine.collect.sources.SystemCollectSource;
-import io.crate.execution.engine.collect.count.CountOperation;
+import io.crate.execution.engine.distribution.DistributingConsumerFactory;
+import io.crate.execution.engine.distribution.SingleBucketBuilder;
+import io.crate.execution.engine.distribution.merge.PagingIterator;
 import io.crate.execution.engine.fetch.FetchContext;
 import io.crate.execution.engine.join.NestedLoopOperation;
-import io.crate.execution.engine.distribution.merge.PagingIterator;
-import io.crate.execution.engine.distribution.DistributingConsumerFactory;
 import io.crate.execution.engine.pipeline.ProjectingRowConsumer;
 import io.crate.execution.engine.pipeline.ProjectionToProjectorVisitor;
 import io.crate.execution.engine.pipeline.ProjectorFactory;
+import io.crate.execution.support.Paging;
+import io.crate.expression.InputFactory;
+import io.crate.expression.RowFilter;
+import io.crate.expression.eval.EvaluatingNormalizer;
+import io.crate.metadata.Functions;
+import io.crate.metadata.Routing;
 import io.crate.planner.distribution.DistributionType;
-import io.crate.execution.dsl.phases.UpstreamPhase;
-import io.crate.execution.dsl.phases.ExecutionPhase;
-import io.crate.execution.dsl.phases.ExecutionPhaseVisitor;
-import io.crate.execution.dsl.phases.ExecutionPhases;
 import io.crate.planner.node.StreamerVisitor;
-import io.crate.execution.dsl.phases.CollectPhase;
-import io.crate.execution.dsl.phases.CountPhase;
-import io.crate.execution.dsl.phases.MergePhase;
-import io.crate.execution.dsl.phases.PKLookupPhase;
-import io.crate.execution.dsl.phases.RoutedCollectPhase;
-import io.crate.execution.dsl.phases.NestedLoopPhase;
-import io.crate.execution.dsl.phases.FetchPhase;
 import io.crate.types.DataTypes;
 import org.apache.logging.log4j.Logger;
 import org.elasticsearch.cluster.service.ClusterService;
@@ -97,8 +87,8 @@ import org.elasticsearch.common.inject.Inject;
 import org.elasticsearch.common.inject.Singleton;
 import org.elasticsearch.common.logging.Loggers;
 import org.elasticsearch.common.settings.Settings;
-import org.elasticsearch.indices.IndicesService;
 import org.elasticsearch.common.util.BigArrays;
+import org.elasticsearch.indices.IndicesService;
 import org.elasticsearch.threadpool.ThreadPool;
 
 import javax.annotation.Nullable;
@@ -123,7 +113,7 @@ public class ContextPreparer extends AbstractComponent {
     private final Logger nlContextLogger;
     private final ClusterService clusterService;
     private final CountOperation countOperation;
-    private final CircuitBreaker circuitBreaker;
+    private final CrateCircuitBreakerService circuitBreakerService;
     private final DistributingConsumerFactory distributingConsumerFactory;
     private final InnerPreparer innerPreparer;
     private final InputFactory inputFactory;
@@ -135,7 +125,7 @@ public class ContextPreparer extends AbstractComponent {
                            MapSideDataCollectOperation collectOperation,
                            ClusterService clusterService,
                            NodeJobsCounter nodeJobsCounter,
-                           CrateCircuitBreakerService breakerService,
+                           CrateCircuitBreakerService circuitBreakerService,
                            CountOperation countOperation,
                            ThreadPool threadPool,
                            DistributingConsumerFactory distributingConsumerFactory,
@@ -152,7 +142,7 @@ public class ContextPreparer extends AbstractComponent {
         this.clusterService = clusterService;
         this.countOperation = countOperation;
         this.pkLookupOperation = new PKLookupOperation(indicesService, shardCollectSource);
-        circuitBreaker = breakerService.getBreaker(CrateCircuitBreakerService.QUERY);
+        this.circuitBreakerService = circuitBreakerService;
         this.distributingConsumerFactory = distributingConsumerFactory;
         innerPreparer = new InnerPreparer();
         inputFactory = new InputFactory(functions);
@@ -562,7 +552,7 @@ public class ContextPreparer extends AbstractComponent {
             Collection<? extends Projection> shardProjections = shardProjections(pkLookupPhase.projections());
             Collection<? extends Projection> nodeProjections = nodeProjections(pkLookupPhase.projections());
 
-            RamAccountingContext ramAccountingContext = RamAccountingContext.forExecutionPhase(circuitBreaker, pkLookupPhase);
+            RamAccountingContext ramAccountingContext = RamAccountingContext.forExecutionPhase(breaker(), pkLookupPhase);
             RowConsumer nodeRowConsumer = ProjectingRowConsumer.create(
                 context.getRowConsumer(pkLookupPhase, 0),
                 nodeProjections,
@@ -592,7 +582,7 @@ public class ContextPreparer extends AbstractComponent {
 
             int pageSize = Paging.getWeightedPageSize(Paging.PAGE_SIZE, 1.0d / phase.nodeIds().size());
             RowConsumer consumer = context.getRowConsumer(phase, pageSize);
-            RamAccountingContext ramAccountingContext = RamAccountingContext.forExecutionPhase(circuitBreaker, phase);
+            RamAccountingContext ramAccountingContext = RamAccountingContext.forExecutionPhase(breaker(), phase);
             consumer = ProjectingRowConsumer.create(
                 consumer,
                 phase.projections(),
@@ -619,7 +609,7 @@ public class ContextPreparer extends AbstractComponent {
                     phase.orderByPositions(),
                     () -> new RowAccounting(
                         phase.inputTypes(),
-                        RamAccountingContext.forExecutionPhase(circuitBreaker, phase))),
+                        RamAccountingContext.forExecutionPhase(breaker(), phase))),
                 DataTypes.getStreamers(phase.inputTypes()),
                 ramAccountingContext,
                 phase.numUpstreams()
@@ -635,7 +625,7 @@ public class ContextPreparer extends AbstractComponent {
 
             RamAccountingContext ramAccountingContext = context.getRamAccountingContext(phase);
             if (ramAccountingContext == null) {
-                ramAccountingContext = RamAccountingContext.forExecutionPhase(circuitBreaker, phase);
+                ramAccountingContext = RamAccountingContext.forExecutionPhase(breaker(), phase);
             }
 
             context.registerSubContext(new JobCollectContext(
@@ -650,7 +640,7 @@ public class ContextPreparer extends AbstractComponent {
 
         @Override
         public Boolean visitCollectPhase(CollectPhase phase, PreparerContext context) {
-            RamAccountingContext ramAccountingContext = RamAccountingContext.forExecutionPhase(circuitBreaker, phase);
+            RamAccountingContext ramAccountingContext = RamAccountingContext.forExecutionPhase(breaker(), phase);
             RowConsumer consumer = context.getRowConsumer(phase, Paging.PAGE_SIZE);
             context.registerSubContext(new JobCollectContext(
                 phase,
@@ -692,7 +682,7 @@ public class ContextPreparer extends AbstractComponent {
 
         @Override
         public Boolean visitNestedLoopPhase(NestedLoopPhase phase, PreparerContext context) {
-            RamAccountingContext ramAccountingContext = RamAccountingContext.forExecutionPhase(circuitBreaker, phase);
+            RamAccountingContext ramAccountingContext = RamAccountingContext.forExecutionPhase(breaker(), phase);
             RowConsumer lastConsumer = context.getRowConsumer(phase, Paging.PAGE_SIZE);
 
             RowConsumer firstConsumer = ProjectingRowConsumer.create(
@@ -771,7 +761,7 @@ public class ContextPreparer extends AbstractComponent {
                     mergePhase.orderByPositions(),
                     () -> new RowAccounting(
                         mergePhase.inputTypes(),
-                        RamAccountingContext.forExecutionPhase(circuitBreaker, mergePhase))),
+                        RamAccountingContext.forExecutionPhase(breaker(), mergePhase))),
                 StreamerVisitor.streamersFromOutputs(mergePhase),
                 ramAccountingContext,
                 mergePhase.numUpstreams()
@@ -783,5 +773,9 @@ public class ContextPreparer extends AbstractComponent {
     private static long toKey(int phaseId, byte inputId) {
         long l = (long) phaseId;
         return (l << 32) | (inputId & 0xffffffffL);
+    }
+
+    private CircuitBreaker breaker() {
+        return circuitBreakerService.getBreaker(CrateCircuitBreakerService.QUERY);
     }
 }
